--- a/app/views/searchcases/layoutstaff.html
+++ b/app/views/searchcases/layoutstaff.html
@@ -46,123 +46,119 @@
 
 
 
-    <header class="hmcts-header" role="banner">
+        <header class="hmcts-header" role="banner" >
 
-        <div style="max-width:1740px;  min-width:960px;   margin: 0px 40px 0px 40px; display: flex; justify-content: center;">
+            <div style=" max-width:1840px; margin: 0 auto;">
+                <!-- Header - Top row -->
+                <div style="max-width:1740px;  min-width:960px;   margin: 0px 40px 0px 40px; display: flex; justify-content: center;">
 
-            <div style="width: 406px; ">
-                <a style="color: white; font-size: 24px; font-weight: bold; text-decoration: none;" href="#">Manage Cases</a>
-            </div>
-
-
-            <div style="display: flex; flex-grow: 1;">
-            </div>
+                    <div style="width: 406px; ">
+                        <a style="color: white; font-size: 24px; font-weight: bold; text-decoration: none;" href="#">Manage Cases</a>
+                    </div>
 
 
-            <div class="hmcts-header__container" style="">
-
-                <div class="hmcts-header__logo">
-                    <a class="hmcts-header__link" href="/noticeofchange/solicitor/caselist" aria-current="page"></a>
-                </div>
-
-                <div class="hmcts-header__content">
-                    <nav class="hmcts-header__navigation" aria-label="Account navigation">
-                        <ul class="hmcts-header__navigation-list">
-                            <li class="hmcts-header__navigation-item">
-                                <a class="hmcts-header__navigation-link" href="#">
-                                    Sign out
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-
-            </div>
-
-        </div>
+                    <div style="display: flex; flex-grow: 1;">
+                    </div>
 
 
-        <div  style="background-color: #0b0c0c;" >
-            <div style=" max-width:1840px;  min-width:960px;   margin: 0px 40px 0px 40px; display: flex; background-color: #0b0c0c;">
+                    <div class="hmcts-header__container" style="">
 
-                <div style="width: 0px; ">
+                        <div class="hmcts-header__logo">
+                            <a class="hmcts-header__link" href="/noticeofchange/solicitor/caselist" aria-current="page"></a>
+                        </div>
 
-                </div>
-
-                <div>
-                    <nav class="hmcts-primary-navigation" aria-label="Primary navigation" style=" width: 500px;">
-                        <ul class="hmcts-primary-navigation__list">
-                            <li class="hmcts-primary-navigation__item">
-                                <a class="hmcts-primary-navigation__link" href="/searchcases/pages/available-tasks-sscs-testing">
-                                    My work
-                                </a>
-                            </li>
-                            <li class="hmcts-primary-navigation__item">
-                                <a class="hmcts-primary-navigation__link" href="#">
-                                    All work
-                                </a>
-                            </li>
-                            <li class="hmcts-primary-navigation__item">
-                                <a class="hmcts-primary-navigation__link" href="/searchcases/pages/startsearch">
-                                    Search cases
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-
-
-                <div style="display: flex; flex-grow: 1;">
-                </div>
-
-
-                <form
-                        name="aspnetForm"
-                        method="post"
-                        id="aspnetForm"
-                        autocomplete="off"
-                        action="/opencase"
-                >
-
-                    <div style="display: flex;flex-direction: row; ">
-                        <p style="color: white; margin-top:8px; margin-bottom: 0px; ">16-digit case reference:  &nbsp;</p>
-                        <input class="govuk-input" id="hmctsrefheader" name="hmctsrefheader" type="text" spellcheck="false" style="width:219px;">
-                        <button class="govuk-button govuk-button--secondary" data-module="govuk-button" style="height:36px; margin-left: 4px; margin-top: 2px;  margin-bottom: 0px;">
-                            Find
-                        </button>
+                        <div class="hmcts-header__content">
+                            <nav class="hmcts-header__navigation" aria-label="Account navigation">
+                                <ul class="hmcts-header__navigation-list">
+                                    <li class="hmcts-header__navigation-item">
+                                        <a class="hmcts-header__navigation-link" href="#">
+                                            Sign out
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
 
                     </div>
-                </form>
+
+                </div>
+
+                <!-- Header - bottom -->
+                <div  style="background-color: #0b0c0c;" >
+                    <div style=" max-width:1840px;  min-width:960px;   margin: 0px 40px 0px 40px; display: flex; background-color: #0b0c0c;">
+
+                        <div style="width: 0px; ">
+
+                        </div>
+
+                        <div>
+                            <nav class="hmcts-primary-navigation" aria-label="Primary navigation" style=" width: 400px;">
+                                <ul class="hmcts-primary-navigation__list">
+                                    <li class="hmcts-primary-navigation__item">
+                                        <a class="hmcts-primary-navigation__link" href="/searchcases/pages/available-tasks-sscs-testing">
+                                            My work
+                                        </a>
+                                    </li>
+                                    <li class="hmcts-primary-navigation__item">
+                                        <a class="hmcts-primary-navigation__link" href="#">
+                                            All work
+                                        </a>
+                                    </li>
+                                    <li class="hmcts-primary-navigation__item">
+                                        <a class="hmcts-primary-navigation__link" href="/searchcases/pages/startsearch">
+                                            Search cases
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
 
 
+                        <div style="display: flex; flex-grow: 1;">
+                        </div>
+
+
+                        <form
+                                name="aspnetForm"
+                                method="post"
+                                id="aspnetForm"
+                                autocomplete="off"
+                                action="/opencase"
+                        >
+
+                            <div style="display: flex;flex-direction: row; ">
+                                <p style="color: white; margin-top:8px; margin-bottom: 0px; ">16-digit case reference:  &nbsp;</p>
+                                <input class="govuk-input" id="hmctsrefheader" name="hmctsrefheader" type="text" spellcheck="false" style="width:219px;">
+                                <button class="govuk-button govuk-button--secondary" data-module="govuk-button" style="height:36px; margin-left: 4px; margin-top: 2px;  margin-bottom: 0px;">
+                                    Find
+                                </button>
+
+                            </div>
+                        </form>
+
+
+                    </div>
+
+                </div>
             </div>
 
-        </div>
-
-
-    </header>
+        </header>
 
 
 
-
-
-
-
-
-
-  <div class="govuk-phase-banner govuk-width-container" style=" max-width:1840px;  min-width:960px;   margin: 0px 40px 0px 40px;">
-    <p class="govuk-phase-banner__content">
-      <strong class="govuk-tag govuk-phase-banner__content__tag">
-        beta
-      </strong>
-      <span class="govuk-phase-banner__text">
-        This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
-      </span>
-    </p>
-  </div>
-
-
-
+<!-- BETA BANNER -->
+    <div style=" max-width:1840px; margin: 0 auto;">
+          <div class="govuk-phase-banner govuk-width-container" style=" max-width:1840px;  min-width:960px;   margin: 0px 40px 0px 40px;">
+            <p class="govuk-phase-banner__content">
+              <strong class="govuk-tag govuk-phase-banner__content__tag">
+                beta
+              </strong>
+              <span class="govuk-phase-banner__text">
+                This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+              </span>
+            </p>
+          </div>
+    </div>
 
 {% endblock %}
 
@@ -170,11 +166,15 @@
 
 
     {% block main %}
-        <div style=" max-width:1840px;  min-width:960px;  margin: 0px 40px 0px 40px;">
-            {% block beforeContent %}{% endblock %}
-            <main class="govuk-main-wrapper {{ mainClasses }}" id="main-content" role="main"{% if mainLang %} lang="{{ mainLang }}"{% endif %} style="padding-top: 25px;">
-                {% block content %}{% endblock %}
-            </main>
+        <div style=" max-width:1840px; margin: 0 auto;">
+            <div style=" max-width:1840px;  min-width:960px;  margin: 20px 40px 0px 40px;  ">
+
+                    {% block beforeContent %}{% endblock %}
+                    <main class="govuk-main-wrapper {{ mainClasses }}" id="main-content" role="main"{% if mainLang %} lang="{{ mainLang }}"{% endif %} style="padding-top: 25px;">
+                        {% block content %}{% endblock %}
+                    </main>
+                </div>
+            </div>
         </div>
     {% endblock %}
 
