--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -9,7 +9,7 @@ GOV.UK Prototype Kit
       Case access prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (29/3/20) <br><br>SUBJECT TO CHANGE - ERROR STATES TO BE ADDED
+      Last updated (13/5/21)
     </h2>
     <div style="display: flex; margin-top: 80px;">
       <div style="width: 800px;">
@@ -37,7 +37,7 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017?usertype=judiciary&">Case details</a><br>Specifc access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-request?usertype=judiciary&">Request access</a><br>Specifc access - Flow request</br></p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-confirmation?usertype=judiciary&">Confirmation</a><br>Specifc access - Flow request</br></p>
-        <p><a target="_blank" href="/caseaccess/pages/myaccess-p?usertype=judiciary&">My access</a><br>Pending Specifc access - Flow request</p>
+        <p><a target="_blank" href="/caseaccess/pages/myaccess-p?usertype=judiciary&">My access</a><br>Pending Specifc access - Flow request<br></p>
     <!--    <p><a target="_blank" href="/caseaccess/pages/myaccess-povd?usertype=judiciary&">View access request</a><br>Pending Specifc access - Flow request</p>
         <p><a target="_blank" href="/caseaccess/pages/myaccess-pod?usertype=judiciary&">Delete request</a><br>Pending Specifc access - Flow request</p>
 -->
