--- a/app/views/caseaccess/layoutstaff.html
+++ b/app/views/caseaccess/layoutstaff.html
@@ -42,6 +42,11 @@
 
 {% block header %}
   {% include "includes/cookie-banner.html" %}
+  <style>
+    .govuk-width-container {
+      max-width: 1820px;
+    }
+  </style>
 
 
 
