--- a/app/views/caseaccess/pages/PA-00467-2017-trr-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trr-case.html
@@ -36,18 +36,10 @@ Case details
     value: "email",
     text: "Based on the reasons you have provided, I do not believe it is appropriate for you to gain access to this case"
   },
-  {
-    value: "phone",
-    text: "You have not supplied enough information, please contact me to discuss further"
-  },
-  {
-    value: "email",
-    text: "You have a conflict of interest with this case"
-  },
 
     {
       value: "other",
-      text: "Other",
+      text: "Provide a reason why you're rejecting the request to access this case",
       conditional: {
         html: textHtml
       }
