--- a/app/views/caseaccess/pages/SSCS-request.html
+++ b/app/views/caseaccess/pages/SSCS-request.html
@@ -33,7 +33,7 @@ Case details
   spellcheck: false,
   classes: "govuk-!-width-one-third",
   label: {
-    text: "16-digit case reference"
+    text: "Case reference"
   }
 }) }}
 {% endset -%}
