--- a/app/views/caseaccess/pages/PA-00321-2018-request-error.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-request-error.html
@@ -26,7 +26,7 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">information</span>
-    This case has challenged access.<br>This is because the case is outside your work area. If you request access to the case, it will be logged for auditing purposes.
+    This case requires challenged access.<br>This is because the case is outside your work area. If you request access to the case, it will be logged for auditing purposes.
 </div>
 </div>
     <div class="govuk-grid-row">
