--- a/app/views/caseaccess/pages/PA-00321-2018-request.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-request.html
@@ -15,7 +15,7 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">information</span>
-    This case has challenged access.<br>This is because the case is outside your work area. If you request access to the case, it will be logged for auditing purposes.
+    This case requires challenged access.<br>This is because the case is outside your work area. If you request access to the case, it will be logged for auditing purposes.
   </div>
 </div>
 <div class="govuk-grid-row">
@@ -25,6 +25,19 @@ Case details
       name: "more-detail",
       id: "more-detail"
     }) }}
+
+{% set emailHtml %}
+{{ govukInput({
+  id: "contact-by-email",
+  name: "contact-by-email",
+  type: "email",
+  spellcheck: false,
+  classes: "govuk-!-width-one-third",
+  label: {
+    text: "Case reference"
+  }
+}) }}
+{% endset -%}
     {% endset -%}
 
     {{ govukRadios({
@@ -38,39 +51,39 @@ Case details
         }
       },
       hint: {
-        text: "Select a reason.
-
-You’ll be given access to the case until midnight tonight.
-"
+        text: "Select a reason."
       },
       items: [
         {
           value: "email",
-          text: "To view details of last hearing or order related to the parties on my current case"
-        },
-        {
-          value: "phone",
-          text: "To view details of the other case linked to the parties/family on my current case"
+          text: "The cases or parties are linked to my current case",
+      conditional: {
+        html: emailHtml
+      }
         },
         {
           value: "email",
-          text: "To determine if the case needs to be consolidated with my current case"
+          text: "To determine if the case needs to be consolidated ",
+      conditional: {
+        html: emailHtml
+      }
         },
-
         {
-          value: "next",
-          text: "To view evidence in the best interest of a child involved in current proceedings"
+          value: "email",
+          text: "To consider an order for transfer "
         },
 
         {
           value: "other",
-          text: "Other",
+          text: "Other reason",
           conditional: {
             html: textHtml
           }
         }
       ]
     }) }}
+
+
 
 
     {{ govukButton({
