--- a/app/views/caseaccess/pages/PA-00467-2017-request.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-request.html
@@ -14,62 +14,26 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">information</span>
-    This case has specific access.<br>This means it requires authorisation. If you request access to the case, it will be logged for auditing purposes.
+    This case requires specific access.<br>This means it’s outside your jurisdiction and requires authorisation. If you request access to the case, it will be logged for auditing purposes.
   </div>
 </div>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    {% set textHtml %}
-    {{ govukTextarea({
-      name: "more-detail",
-      id: "more-detail"
-    }) }}
-    {% endset -%}
-
-    {{ govukRadios({
-      idPrefix: "contact",
-      name: "contact",
-      fieldset: {
-        legend: {
-          text: "Why do you need to access this case?",
-          isPageHeading: true,
-          classes: "govuk-fieldset__legend--l"
-        }
-      },
-      hint: {
-        text: "Select a reason."
-      },
-      items: [
-        {
-          value: "email",
-          text: "To view details of last hearing or order related to the parties on my current case"
-        },
-        {
-          value: "phone",
-          text: "To view details of the other case linked to the parties/family on my current case"
-        },
-        {
-          value: "email",
-          text: "To determine if the case needs to be consolidated with my current case"
-        },
-        {
-          value: "next",
-          text: "To view evidence in the best interest of a child involved in current proceedings"
-        },
-
-
-        {
-          value: "other",
-          text: "Other",
-          conditional: {
-            html: textHtml
-          }
-        }
-      ]
-    }) }}
-
-
-
+    <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="more-detail">
+        Why do you need to access this case?
+      </label>
+    </h1>
+    <div id="more-detail-hint" class="govuk-hint">
+      Provide detailed reasons for requesting access.
+    </div>
+    <!--
+    <ul class="govuk-list govuk-list--bullet">
+<li>the case reference</li>
+<li>how long you need to access this case for</li>
+</ul> -->
+    <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="8" aria-describedby="more-detail-hint"></textarea>
+  </div>
+  </div>
 
     {{ govukButton({
   text: "Submit",
@@ -84,8 +48,7 @@ Case details
   classes: "govuk-button--secondary"
 }) }} -->
 <p>  <a class="govuk-body" href="results-s2">Cancel</a></p>
-</div>
-</div>
+
 <form method=""  action="#" class="for4" style=" float: left; margin-top: 60px;">
     <p style="margin-bottom: 0px;">Select to show validation errors</p>
     <select size="1" name="hop" style="height:25px;" onchange="document.location.href=this.value">
