--- a/app/views/caseaccess/pages/PA-00467-2017-tr-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tr-case.html
@@ -23,13 +23,14 @@ Case details
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Case reference</th>
                 <td class="govuk-table__cell">PA/00467/2017</td>
               </tr>
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Request from</th>
-                <td class="govuk-table__cell">Judge Randel-Combeswardly</td>
-              </tr>
+
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Date submitted</th>
-                <td class="govuk-table__cell">DD/MM/YYYY</td>
+                <td class="govuk-table__cell">{{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}</td>
+              </tr>
+              <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Request from</th>
+                <td class="govuk-table__cell">Judge Randel-Combeswardly<br>Hearing judge - HR</td>
               </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for case access</th>
