--- a/app/views/caseaccess/pages/myaccess-tc.html
+++ b/app/views/caseaccess/pages/myaccess-tc.html
@@ -46,16 +46,14 @@ My work
         <table class="govuk-table ">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 140px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-                <!--  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none""></th> -->
-  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Access</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">End</button></th>
-                <!--     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 130px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th> -->
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 110px;" aria-sort="none"><a href="#"></a></th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Date submitted</button></th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Access</button></th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">End</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: auto;" aria-sort="none"><a href="#"></a></th>
               </tr>
             </thead>
             <tbody class="govuk-table__body">
@@ -64,12 +62,11 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="/caseaccess/pages/PA-00467-2017-atc"><strong>Amelia Chu</strong></a></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Immigration and Asylum</strong></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Reviewer</strong></td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Specific</strong></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>DD/MM/YYYY </strong></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>DD/MM/YYYY </strong></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>14/04/2021</strong></td>
+                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Specific access</strong></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>{{ now |  date("add", 0, "day") | date( "D MMMM YYYY" ) }}</strong></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>{{ now |  date("add", 30, "day") | date( "D MMMM YYYY" ) }} </strong></td>
                     <td class="govuk-table__cell"></td>
-                  </tr>
               </tbody>
           </table>
 {% endblock %}
