--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -82,7 +82,7 @@ GOV.UK Prototype Kit
 
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-noj?usertype=judiciary&">Roles and access - Allocate role</a><br> - v3.3</p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajn?usertype=judiciary&">Roles and access - Allocate a judicial role</a><br> - v3.3</p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj-err-s?usertype=judiciary&">Roles and access - Allocate role - error</a><br>NEW - additional error page</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj-err-s?usertype=judiciary&">Roles and access - Allocate role - generic error</a><br>NEW - additional generic error page when no selction has been made</p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhn?usertype=judiciary&">Roles and access - Allocate a judicial role - choose</a><br> - v3.3</p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhan?usertype=judiciary&">Roles and access - Allocate a judicial role - find</a><br> - v3.3</p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajndur?usertype=judiciary&">Roles and access - Allocate a judicial role - duration</a><br> - v3.3</p>
