--- a/app/views/workallocation/pages/wa-PA-00467-2017-aj-err-s.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-aj-err-s.html
@@ -13,7 +13,7 @@ Case details
   titleText: "There is a problem",
   errorList: [
     {
-      text: "You must select a role",
+      text: "You must select an option",
       href: "#"
     }
   ]
@@ -28,7 +28,7 @@ Case details
           </h3>
         </legend>
         <span id="changed-name-error" class="govuk-error-message">
-      <span class="govuk-visually-hidden">Error:</span> You must select a role
+      <span class="govuk-visually-hidden">Error:</span> You must select an option
     </span>
         <div class="govuk-radios">
           <div class="govuk-radios__item">
