--- a/app/views/caseaccess/pages/PA-00467-2017-request.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-request.html
@@ -23,6 +23,26 @@ Case details
         Why do you need to access this case?
       </label>
     </h1>
+<div class="govuk-!-padding-bottom-3"></div>
+    <details class="govuk-details" data-module="govuk-details">
+      <summary class="govuk-details__summary">
+        <span class="govuk-details__summary-text">
+          Help with access requests
+        </span>
+      </summary>
+      <div class="govuk-details__text">
+
+        <p class="govuk-body">To help the approver make the decision about your request, you may wish to include:</p>
+<ul class="govuk-list govuk-list--bullet">
+  <li>the case reference of the linked case </li>
+  <li>how long you would require access to this case</li>
+  <li>reasons why you require access to this case</li>
+</ul>
+
+    </details>
+
+
+
     <div id="more-detail-hint" class="govuk-hint">
       Provide detailed reasons for requesting access.
     </div>
