--- a/app/views/caseaccess/pages/PA-00467-2017-tr.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tr.html
@@ -30,7 +30,7 @@ Case details
         </tr>
         <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header" style="width: 220px;">Request from</th>
-          <td class="govuk-table__cell">Judge Randel-Combeswardly<br>Hearing judge - HR</td>
+          <td class="govuk-table__cell">Judge Randel-Combeswardly<br></td>
         </tr>
         <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for case access</th>
