--- a/app/views/caseaccess/pages/PA-00467-2017-request.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-request.html
@@ -27,16 +27,16 @@ Case details
     <details class="govuk-details" data-module="govuk-details">
       <summary class="govuk-details__summary">
         <span class="govuk-details__summary-text">
-          Help with access requests
+          Help with requesting case access
         </span>
       </summary>
       <div class="govuk-details__text">
 
-        <p class="govuk-body">To help the approver make the decision about your request, you may wish to include:</p>
+        <p class="govuk-body">If possible, you should include:</p>
 <ul class="govuk-list govuk-list--bullet">
   <li>the case reference of the linked case </li>
-  <li>how long you would require access to this case</li>
-  <li>reasons why you require access to this case</li>
+  <li>how long you require access to this case</li>
+  <li>any other reasons why you require access</li>
 </ul>
 
     </details>
@@ -44,7 +44,7 @@ Case details
 
 
     <div id="more-detail-hint" class="govuk-hint">
-      Provide detailed reasons for requesting access.
+      Provide a reason for requesting access to this case.
     </div>
     <!--
     <ul class="govuk-list govuk-list--bullet">
