--- a/app/views/caseaccess/pages/PA-00467-2017-request-error.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-request-error.html
@@ -58,7 +58,7 @@ This case requires specific access.<br>This means it’s outside your jurisdicti
 
 
     <div id="more-detail-hint" class="govuk-hint">
-      Provide a reason for requesting access to this case.
+      Provide a reason.
     </div>
     <span id="passport-issued-error" class="govuk-error-message">
       <span class="govuk-visually-hidden">Error:</span> Enter more detail
