--- a/app/views/caseaccess/pages/PA-00467-2017-request.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-request.html
@@ -44,7 +44,7 @@ Case details
 
 
     <div id="more-detail-hint" class="govuk-hint">
-      Provide a reason for requesting access to this case.
+      Provide a reason.
     </div>
     <!--
     <ul class="govuk-list govuk-list--bullet">
