--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -89,6 +89,18 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchkn?usertype=judiciary&">Roles and access - Allocate a judicial role - check details</a><br> - v3.3 </p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-loj?usertype=judiciary&">Roles and access - Allocate a judicial role - complete</a><br> - v3.3</p>
 
+        <div><span class="xui-alert-link__number">4c</span> <span class="govuk-body" style="margin-left: 10px;">Extra scenario (legal ops user is allocating a judicial role)</span> </div>
+        <div class="govuk-!-padding-bottom-6"></div>
+
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-nojlo?usertype=judiciary&">Roles and access - Allocate role</a><br> - v3.3</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajnlo?usertype=judiciary&">Roles and access - Allocate a judicial role</a><br> - v3.3</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhanlo?usertype=judiciary&">Roles and access - Allocate a judicial role - find</a><br> - v3.3</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajndurlo?usertype=judiciary&">Roles and access - Allocate a judicial role - duration</a><br> - v3.3</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchknlo?usertype=judiciary&">Roles and access - Allocate a judicial role - check details</a><br> - v3.3 </p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-loj?usertype=judiciary&">Roles and access - Allocate a judicial role - complete</a><br> - v3.3</p>
+
+
+
 <hr class="govuk-section-break govuk-section-break--visible">
 <p class="govuk-!-padding-bottom-2"></p>
 
@@ -120,9 +132,9 @@ GOV.UK Prototype Kit
   <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj-fpj?usertype=judiciary&">Roles and access - Allocate a judicial role - Choose a role (IAC)</a><br>Checked with DS - v3.3</p>
   <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajh-fpj?usertype=judiciary&">Roles and access - Allocate a judicial role - Hearing judge - Choose how to allocate... (IAC)</a><br>Checked with DS - v3.3 </p>
   <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajha-fpj?usertype=judiciary&">Roles and access - Allocate a judicial role - Hearing judge - Find the judge (IAC)</a><br>Checked with DS - v3.3</p>
-  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj?usertype=judiciary&">Roles and access - Allocate a judicial role - Hearing judge - Duration of access and role (IAC)</a><br>Checked with DS - v3.3</p>
-  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj-err?usertype=judiciary&">Roles and access - Allocate a judicial role - Hearing judge - Duration of access and role (IAC) - ERROR - 1</a><br>Checked with DS - v3.3</p>
-  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj-err-2?usertype=judiciary&">Roles and access - Allocate a judicial role - Hearing judge - Duration of access and role (IAC) - ERROR - 2</a><br>Checked with DS - v3.3</p>
+  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj?usertype=judiciary&">Roles and access - Allocate a judicial role - Hearing judge - Duration of role (IAC)</a><br>Checked with DS - v3.3</p>
+  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj-err?usertype=judiciary&">Roles and access - Allocate a judicial role - Hearing judge - Duration of role (IAC) - ERROR - 1</a><br>Checked with DS - v3.3</p>
+  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj-err-2?usertype=judiciary&">Roles and access - Allocate a judicial role - Hearing judge - Duration of role (IAC) - ERROR - 2</a><br>Checked with DS - v3.3</p>
 
   <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajchk-fpj?usertype=judiciary&">Roles and access - Allocate a judicial role - Hearing judge - Check details (IAC)</a><br>Checked with DS - v3.3</p>
   <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arj-fpj?usertype=judiciary&">Roles and access - Allocate a judicial role - Hearing judge - confirmation (IAC)</a><br>Checked with DS - v3.3</p>
@@ -148,6 +160,14 @@ GOV.UK Prototype Kit
 <div class="xui-alert-link__number">6b </div>
 <div class="govuk-!-padding-bottom-6"></div>
 <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-lo?usertype=judiciary&">Roles and access</a><br>Checked with DS - v3.3</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor?usertype=judiciary&">Choose a role</a><br>Checked with DS - v3.3</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-ftp?usertype=judiciary&">Find the person</a><br>Checked with DS - v3.3</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-dur?usertype=judiciary&">Duration of role</a><br>Checked with DS - v3.3</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-chk?usertype=judiciary&">Check your allocation</a><br>Checked with DS - v3.3</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-lo?usertype=judiciary&">Role allocated</a><br>Checked with DS - v3.3</p>
+
+
+
 
 <h2 class="govuk-heading-l">My cases</h2>
 <div class="xui-alert-link__number">7 </div>
@@ -325,6 +345,16 @@ GOV.UK Prototype Kit
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchkn?usertype=staff&">Roles and access - Allocate a judicial role - check details</a><br> - v3.3 </p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-loj?usertype=staff&">Roles and access - Allocate a judicial role - complete</a><br> - v3.3</p>
 
+    <div><span class="xui-alert-link__number">4c</span> <span class="govuk-body" style="margin-left: 10px;">Extra scenario (legal ops user is allocating a judicial role)</span> </div>
+    <div class="govuk-!-padding-bottom-6"></div>
+
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-nojlo?usertype=staff&">Roles and access - Allocate role</a><br> - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajnlo?usertype=staff&">Roles and access - Allocate a judicial role</a><br> - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhanlo?usertype=staff&">Roles and access - Allocate a judicial role - find</a><br> - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajndurlo?usertype=staff&">Roles and access - Allocate a judicial role - duration</a><br> - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchknlo?usertype=staff&">Roles and access - Allocate a judicial role - check details</a><br> - v3.3 </p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-loj?usertype=staff&">Roles and access - Allocate a judicial role - complete</a><br> - v3.3</p>
+
     <hr class="govuk-section-break govuk-section-break--visible">
     <p class="govuk-!-padding-bottom-2"></p>
 
@@ -356,9 +386,9 @@ GOV.UK Prototype Kit
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj-fpj?usertype=staff&">Roles and access - Allocate a judicial role - Choose a role (IAC)</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajh-fpj?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Choose how to allocate... (IAC)</a><br>Checked with DS - v3.3 </p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajha-fpj?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Find the judge (IAC)</a><br>Checked with DS - v3.3</p>
-    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Duration of access and role (IAC)</a><br>Checked with DS - v3.3</p>
-    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj-err?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Duration of access and role (IAC) - ERROR - 1</a><br>Checked with DS - v3.3</p>
-    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj-err-2?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Duration of access and role (IAC) - ERROR - 2</a><br>Checked with DS - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Duration of role (IAC)</a><br>Checked with DS - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj-err?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Duration of role (IAC) - ERROR - 1</a><br>Checked with DS - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj-err-2?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Duration of role (IAC) - ERROR - 2</a><br>Checked with DS - v3.3</p>
 
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajchk-fpj?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Check details (IAC)</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arj-fpj?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - confirmation (IAC)</a><br>Checked with DS - v3.3</p>
@@ -384,6 +414,12 @@ GOV.UK Prototype Kit
     <div class="xui-alert-link__number">6b </div>
     <div class="govuk-!-padding-bottom-6"></div>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-lo?usertype=staff&">Roles and access</a><br>Checked with DS - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor?usertype=staff&">Choose a role</a><br>Checked with DS - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-ftp?usertype=staff&">Find the person</a><br>Checked with DS - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-dur?usertype=staff&">Duration of role</a><br>Checked with DS - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-chk?usertype=staff&">Check your allocation</a><br>Checked with DS - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-lo?usertype=staff&">Role allocated</a><br>Checked with DS - v3.3</p>
+
 
     <h2 class="govuk-heading-l">My cases</h2>
     <div class="xui-alert-link__number">7 </div>
