--- a/app/views/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj-err.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj-err.html
@@ -29,7 +29,7 @@ Case details
 
 <div class="govuk-form-group govuk-form-group--error">
   <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
-      Duration of access and role
+      Duration of role
     </label>
   </h2>
 
