--- a/app/views/workallocation/pages/wa-PA-00467-2017-ajhadur-fpjc.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ajhadur-fpjc.html
@@ -16,7 +16,7 @@ Case details
 
 <div class="govuk-form-group">
   <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
-      Duration of access and role
+      Duration of role
     </label>
   </h2>
   {% set setDuration %}
