--- a/app/views/workallocation/pages/wa-PA-00467-2017-alor-lo.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-alor-lo.html
@@ -125,15 +125,37 @@ Case details
     <p><a href="#" class="govuk-link">Allocate a role</a><!--wa-PA-00467-2017-aj--></p>
         <h2 class="govuk-heading-m">Legal Ops</h2>
 
-        <dl class="govuk-summary-list">
-          <div class="govuk-summary-list__row">
+        <table class="govuk-table ">
+        <thead class="govuk-table__head">
+          <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19"  style="width: 250px;">Name</th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 150px;">Role</th>
+        <!--        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " >Access type</th> -->
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 200px;">Location</th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">Start</th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 200px;">End</th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 100px;"></th>
+          </tr>
+        </thead>
 
-            <dd class="govuk-summary-list__value">
-              There are no legal ops roles for this case.
-            </dd>
-          </div>
-        </dl>
-    <p><a href="wa-PA-00467-2017-alor" class="govuk-link">Allocate a role</a></p>
+        <tbody class="govuk-table__body">
+
+
+            <tr class="govuk-table__row">
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Neha Williamson</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case manager</td>
+              <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">{{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }} </td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+
+            </tr>
+
+
+        </tbody>
+    </table>
+    <p><a href="#" class="govuk-link">Allocate a role</a></p>
     <p><a href="#" class="govuk-link"></a></p>
         <h2 class="govuk-heading-m">Exclusions</h2>
         <dl class="govuk-summary-list">
@@ -144,7 +166,7 @@ Case details
             </dd>
           </div>
         </dl>
-        <p><a href="wa-PA-00467-2017-coi" class="govuk-link">Add</a></p>
+        <p><a href="#" class="govuk-link">Add</a></p>
 <!--
         <form action="#">
           <div class="govuk-button-group">
