--- a/app/views/workallocation/pages/wa-PA-00467-2017-alor-who.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-alor-who.html
@@ -7,23 +7,31 @@
 {% block pageTitle %}
 Case details
 {% endblock %}
-
+{% block beforeContent %}
+<a href="wa-PA-00467-2017-alor" class="govuk-back-link">Back</a>
+{% endblock %}
 {% block content %}
+<span class="govuk-caption-l">Case manager</span>
 <h2 class="govuk-heading-l">Allocate a legal ops role</h2>
   <form action="#" method="post" onsubmit="usePage(this, 'bob');">
     <div class="govuk-form-group">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
           <h3 class="govuk-fieldset__heading">
-            Choose a role
+            Choose how to allocate the role
           </h3>
         </legend>
         <div class="govuk-radios">
-
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="wa-PA-00467-2017-alor-who">
+            <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="#">
+            <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+              Allocate to me
+            </label>
+          </div>
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="wa-PA-00467-2017-alor-ftp">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-              Case manager
+              Allocate to another person
             </label>
           </div>
         </div>
