--- a/app/views/workallocation/pages/wa-PA-00467-2017-nojlo.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-nojlo.html
@@ -40,17 +40,17 @@ Case details
     </h2>
     <ul class="govuk-tabs__list">
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="wa-PA-00467-2017-t">
+        <a class="govuk-tabs__tab" href="#">
           Tasks
         </a>
       </li>
        <li class="govuk-tabs__list-item--selected">
-        <a class="govuk-tabs__tab" href="wa-PA-00467-2017-ar">
+        <a class="govuk-tabs__tab" href="#">
           Roles and access
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-a">
+        <a class="govuk-tabs__tab" href="#">
           Overview
         </a>
       </li>
@@ -94,6 +94,16 @@ Case details
       <div>
   <h2 class="govuk-heading-l">Roles and access</h2>
         <h2 class="govuk-heading-m">Judiciary</h2>
+        <dl class="govuk-summary-list">
+          <div class="govuk-summary-list__row">
+
+            <dd class="govuk-summary-list__value">
+              There are no judicial roles for this case.
+            </dd>
+          </div>
+        </dl
+    <p><a href="wa-PA-00467-2017-ajnlo" class="govuk-link">Allocate a role</a></p>
+        <h2 class="govuk-heading-m">Legal Ops</h2>
         <table class="govuk-table ">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
@@ -108,32 +118,22 @@ Case details
         </thead>
 
         <tbody class="govuk-table__body">
+
+
             <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lead Judge</td>
-          <!--          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Bisa Butler</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case manager</td>
+          <!--      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">{{ now |  date("subtract", 20, "day") | date( "D MMMM YYYY" ) }}</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">{{ now |  date("subtract", 80, "day") | date( "D MMMM YYYY" ) }}</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-            </tr>
 
+            </tr>
 
 
         </tbody>
     </table>
-    <p><a href="#" class="govuk-link">Allocate a role</a><!--wa-PA-00467-2017-aj--></p>
-        <h2 class="govuk-heading-m">Legal Ops</h2>
-
-        <dl class="govuk-summary-list">
-          <div class="govuk-summary-list__row">
-
-            <dd class="govuk-summary-list__value">
-              There are no legal ops roles for this case.
-            </dd>
-          </div>
-        </dl>
-    <p><a href="wa-PA-00467-2017-alor" class="govuk-link">Allocate a role</a></p>
     <p><a href="#" class="govuk-link"></a></p>
         <h2 class="govuk-heading-m">Exclusions</h2>
         <dl class="govuk-summary-list">
@@ -144,7 +144,7 @@ Case details
             </dd>
           </div>
         </dl>
-        <p><a href="wa-PA-00467-2017-coi" class="govuk-link">Add</a></p>
+        <p><a href="#" class="govuk-link">Add</a></p>
 <!--
         <form action="#">
           <div class="govuk-button-group">
