--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -9,7 +9,7 @@ GOV.UK Prototype Kit
       Case access prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (13/5/21)
+      Last updated (19/5/21)
     </h2>
     <div style="display: flex; margin-top: 80px;">
       <div style="width: 800px;">
@@ -114,6 +114,7 @@ GOV.UK Prototype Kit
         <!-- SECTION BREAK -->
 
         <h3 class="govuk-heading-s">Scenario E - Booking UI</h3>
+          <p><a target="_blank" href="/caseaccess/pages/booking-sel?usertype=staff&">Pre Booking UI</a><br>Pre selection service</br></p>
         <p><a target="_blank" href="/caseaccess/pages/booking?usertype=judiciary&">Booking UI</a><br>Select type of access</br></p>
       <!--  <p><a target="_blank" href="/caseaccess/pages/booking-location?usertype=judiciary&">Booking UI - location</a><br>Select location- Subject to change</br></p> -->
         <p><a target="_blank" href="/caseaccess/pages/booking-rtn?usertype=judiciary&">Booking UI</a><br>Return post logout - single</br></p>
@@ -220,6 +221,7 @@ GOV.UK Prototype Kit
           <!-- SECTION BREAK -->
 
           <h3 class="govuk-heading-s">Scenario E - Booking UI</h3>
+          <p><a target="_blank" href="/caseaccess/pages/booking-sel?usertype=staff&">Pre Booking UI</a><br>Pre selection service</br></p>
           <p><a target="_blank" href="/caseaccess/pages/booking?usertype=staff&">Booking UI</a><br>Select type of access</br></p>
         <!--  <p><a target="_blank" href="/caseaccess/pages/booking-location?usertype=staff&">Booking UI - location</a><br>Select location- Subject to change</br></p> -->
           <p><a target="_blank" href="/caseaccess/pages/booking-rtn?usertype=staff&">Booking UI</a><br>Return post logout - single</br></p>
